--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -90,7 +90,7 @@
 }
 
 .container .filters .popover li {
-	margin: 5px 0 5px 0;
+	margin: 5px 0 5px 10px;
 }
 
 @media screen and (max-width: 600px) {
