--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -9,7 +9,7 @@
     <!-- FAVICON -->
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/icon.png') }}">
-
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- **********************
 	 CSS styles
 	 ********************** -->
@@ -72,10 +72,12 @@
 	    <h4>&nbsp;</h4>
 	    <ul class="popover">
 	      {% for amenity in amens|sort(attribute='name') %}
-	      <LI>{{ amenity.name }}</LI>
+	      <LI><input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}"> {{ amenity.name }}</LI>
 	      {% endfor %}
 	    </ul>
 	  </div>
+
+
 
 	  <!-- **********************
 	       SEARCH BUTTON
